Refactor overlay HTML and add nanoid dependency
Refactor the JS overlay markup in app/jstest/page.jsx to build innerHTML from an array joined with newlines (improves readability and avoids a multiline template literal). Add nanoid@^5.1.6 to package.json dependencies. Simplify Netlify build in netlify.toml to just run the build command (remove the one-off npm install for nanoid since it's now declared in package.json). Files changed: app/jstest/page.jsx, package.json, netlify.toml.

--- a/doctor-smartphone-lelystad-jsx-en-css/netlify.toml
+++ b/doctor-smartphone-lelystad-jsx-en-css/netlify.toml
@@ -2,5 +2,5 @@
   package = "@netlify/plugin-nextjs"
 
 [build]
-  command = "npm install nanoid --legacy-peer-deps && npm run build"
+  command = "npm run build"
   publish = ".next"
