--- a/doctor-smartphone-lelystad-jsx-en-css/package.json
+++ b/doctor-smartphone-lelystad-jsx-en-css/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.454.0",
     "mongoose": "^9.0.1",
     "motion": "^12.29.2",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.9.16",
