--- a/doctor-smartphone-lelystad-jsx-en-css/package.json
+++ b/doctor-smartphone-lelystad-jsx-en-css/package.json
@@ -67,6 +67,7 @@
     "react-barcode": "^1.6.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
+    "react-dymo-hooks": "^4.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
